// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Distribution gap renders 1`] = `
<div
  class="StyledGrommet-gGRXwz deqpVW"
>
  <div
    class="StyledBox-bStriS cxWumY"
    direction="row"
    overflow="hidden"
  >
    <div
      class="StyledBox-bStriS jXIwjK"
      direction="column"
      overflow="hidden"
    >
      <span>
        3
      </span>
    </div>
    <div
      class="StyledBox__StyledBoxGap-ixLlSs exjoTJ"
      direction="row"
    />
    <div
      class="StyledBox-bStriS jXIwjK"
      direction="column"
      overflow="hidden"
    >
      <div
        class="StyledBox-bStriS WDSkW"
        direction="column"
        overflow="hidden"
      >
        <span>
          2
        </span>
      </div>
      <div
        class="StyledBox__StyledBoxGap-ixLlSs cCJaMC"
        direction="column"
      />
      <div
        class="StyledBox-bStriS bPCbgc"
        direction="column"
        overflow="hidden"
      >
        <span>
          1
        </span>
      </div>
    </div>
  </div>
  <div
    class="StyledBox-bStriS cxWumY"
    direction="row"
    overflow="hidden"
  >
    <div
      class="StyledBox-bStriS jXIwjK"
      direction="column"
      overflow="hidden"
    >
      <span>
        3
      </span>
    </div>
    <div
      class="StyledBox__StyledBoxGap-ixLlSs ctEUP"
      direction="row"
    />
    <div
      class="StyledBox-bStriS jXIwjK"
      direction="column"
      overflow="hidden"
    >
      <div
        class="StyledBox-bStriS WDSkW"
        direction="column"
        overflow="hidden"
      >
        <span>
          2
        </span>
      </div>
      <div
        class="StyledBox__StyledBoxGap-ixLlSs fXNyRf"
        direction="column"
      />
      <div
        class="StyledBox-bStriS bPCbgc"
        direction="column"
        overflow="hidden"
      >
        <span>
          1
        </span>
      </div>
    </div>
  </div>
  <div
    class="StyledBox-bStriS cxWumY"
    direction="row"
    overflow="hidden"
  >
    <div
      class="StyledBox-bStriS jXIwjK"
      direction="column"
      overflow="hidden"
    >
      <span>
        3
      </span>
    </div>
    <div
      class="StyledBox__StyledBoxGap-ixLlSs ikpNgc"
      direction="row"
    />
    <div
      class="StyledBox-bStriS jXIwjK"
      direction="column"
      overflow="hidden"
    >
      <div
        class="StyledBox-bStriS WDSkW"
        direction="column"
        overflow="hidden"
      >
        <span>
          2
        </span>
      </div>
      <div
        class="StyledBox__StyledBoxGap-ixLlSs iUhAwz"
        direction="column"
      />
      <div
        class="StyledBox-bStriS bPCbgc"
        direction="column"
        overflow="hidden"
      >
        <span>
          1
        </span>
      </div>
    </div>
  </div>
  <div
    class="StyledBox-bStriS cxWumY"
    direction="row"
    overflow="hidden"
  >
    <div
      class="StyledBox-bStriS jXIwjK"
      direction="column"
      overflow="hidden"
    >
      <span>
        3
      </span>
    </div>
    <div
      class="StyledBox__StyledBoxGap-ixLlSs hkoCfE"
      direction="row"
    />
    <div
      class="StyledBox-bStriS jXIwjK"
      direction="column"
      overflow="hidden"
    >
      <div
        class="StyledBox-bStriS WDSkW"
        direction="column"
        overflow="hidden"
      >
        <span>
          2
        </span>
      </div>
      <div
        class="StyledBox__StyledBoxGap-ixLlSs kCcOfX"
        direction="column"
      />
      <div
        class="StyledBox-bStriS bPCbgc"
        direction="column"
        overflow="hidden"
      >
        <span>
          1
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Distribution renders 1`] = `
<div
  class="StyledGrommet-gGRXwz deqpVW"
/>
`;

exports[`Distribution values renders 1`] = `
<div
  class="StyledGrommet-gGRXwz deqpVW"
>
  <div
    class="StyledBox-bStriS cxWumY"
    direction="row"
    overflow="hidden"
  >
    <div
      class="StyledBox-bStriS efzxlV"
      direction="column"
      overflow="hidden"
    >
      <span>
        20
      </span>
    </div>
    <div
      class="StyledBox__StyledBoxGap-ixLlSs exjoTJ"
      direction="row"
    />
    <div
      class="StyledBox-bStriS eDmSGN"
      direction="column"
      overflow="hidden"
    >
      <div
        class="StyledBox-bStriS jXIwjK"
        direction="column"
        overflow="hidden"
      >
        <span>
          3
        </span>
      </div>
      <div
        class="StyledBox__StyledBoxGap-ixLlSs cCJaMC"
        direction="column"
      />
      <div
        class="StyledBox-bStriS fReIuI"
        direction="row"
        overflow="hidden"
      >
        <div
          class="StyledBox-bStriS WDSkW"
          direction="column"
          overflow="hidden"
        >
          <span>
            2
          </span>
        </div>
        <div
          class="StyledBox__StyledBoxGap-ixLlSs exjoTJ"
          direction="row"
        />
        <div
          class="StyledBox-bStriS bPCbgc"
          direction="column"
          overflow="hidden"
        >
          <span>
            1
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
